# zk-var

./: .env.example  .gitignore  README.md  eslint.config.js  foundry.toml  index.html  initialize.js  package-lock.json  package.json  query.js  vercel.json
api/: markets.js  prove.js
broadcast/Deploy.s.sol/1952/: run-1779240535020.json  run-1779705439.json  run-latest.json
broadcast/InitializePools.s.sol/1952/: run-1779281499956.json  run-1779705500.json
contracts/: DisputeRegistry.sol  PredictionPool.sol  ZKVerifier.sol
docs/: REAL_ZK_REFEREE.md
script/: Deploy.s.sol  InitializePools.s.sol
scripts/: deploy-sp1-verifier-xlayer.ps1  deploy-zkvar-xlayer.ps1
sp1/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
sp1/lib/: Cargo.toml
sp1/lib/src/: lib.rs
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml
src/: App.jsx  index.css  main.jsx
src/components/: AdminPanel.jsx  AnimatedBackground.jsx  ClaimCenter.jsx  JuryVote.jsx  PredictionBoard.jsx  TransactionHistory.jsx  VARPanel.jsx  WalletConnect.jsx  ZKProver.jsx
src/config/: provenMarkets.js  wagmi.js
src/hooks/: usePrediction.js  useTransactionHistory.js  useWallet.js  useZKProof.js
src/store/: useAppStore.js
src/styles/: animations.css  components.css  globals.css
src/utils/: contractHelpers.js  transactionHistory.js  zkHelpers.js
test/: PredictionDispute.t.sol
